# chesshub_backend

./: .gitignore  Dockerfile.backend  README.md  alembic.ini  classes_yourpackage.plantuml  config.yml  docker-compose.dev.yml  pyproject.toml  pytest.ini
article-service/: .gitignore  docker-compose.dev.yml  pyproject.toml
article-service/migrations/: env.py
article-service/migrations/versions/: 15504257b390_init.py
article-service/src/: app.py  settings.py
article-service/src/api/: __init__.py  base.py  category.py  comments.py  reactions.py
article-service/src/application/: __init__.py  article.py  base.py  crud_service.py
article-service/src/domain/: entities.py  protocols.py
article-service/src/infra/: protocols.py
article-service/src/infra/database/: __init__.py  mapping.py  reader.py  repo.py  session.py
article-service/src/infra/s3/: __init__.py  minio.py
migrations/: env.py
migrations/versions/: 242e654057c4_initial.py
pgadmin/: pgadmin4.db
pgadmin/sessions/: 13349a51-fe74-4bca-a757-f2742b87ee8a
src/: app.py  settings.py
src/application/: classes_yourpackage.plantuml  packages_yourpackage.plantuml
src/application/article/: __init__.py  article.py  article_reaction.py  article_tag.py  category.py  image.py  tag.py
src/application/course/: __init__.py  answer.py  course.py  lesson.py  question.py  test.py
src/application/user/: __init__.py  usecases.py
src/domain/: base.py  classes_yourpackage.plantuml  packages_yourpackage.plantuml
src/domain/article/: entities.py  protocols.py
src/domain/course/: entities.py  protocols.py
src/domain/user/: entities.py  exceptions.py  protocols.py  value_objects.py
src/infra/: classes_yourpackage2.plantuml  exceptions.py  packages_yourpackage.plantuml  protocols.py
src/infra/auth/: __init__.py  jwt.py
src/infra/database/: __init__.py  filters.py  models.py  reader.py  session.py  sqla_repo.py
src/infra/database/migrations/: env.py
src/infra/database/migrations/versions/: 45b72adb69da_change_types.py  4b98a11a8d59_fix.py  5535f90590d3_initial2.py  5c5047dcd2bf_initial.py  613ef86251a1_user.py  (+9 more)
src/infra/database/models/: article.py  base.py  user.py
src/infra/database/repositories/: article.py  course.py  user.py
src/infra/integrations/: __init__.py  api.py  api_baseclass.py  api_dataclasses.py  api_tests.py
src/infra/s3/: __init__.py  minio.py
src/presentation/: base.py
src/presentation/article/: __init__.py  article.py  article_reaction.py  article_tag.py  category.py  image.py  ingetrations.py  tag.py
src/presentation/course/: __init__.py  course.py  lesson.py  test.py
src/presentation/user/: __init__.py  routes.py
tests/: conftest.py
tests/application/: test_article.py  test_article_reaction.py  test_article_tag.py  test_category.py  test_tag.py
tests/infra/: s3.py
tools/: opus1.py
user-service/: docker-compose.dev.yml  pyproject.toml
user-service/src/domain/: base.py
