[project]
name = "article-service"
version = "0.1.0"
description = "service for articles"
authors = [
    {name = "Daniil325",email = "potekhindaniil04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "minio (>=7.2.16,<8.0.0)",
    "miniopy-async (>=1.23.3,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pyhumps (>=3.8.0,<4.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "imgspy (>=0.2.2,<0.3.0)",
    "dishka (>=1.7.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

