[project]
name = "user-service"
version = "0.1.0"
description = "service for user profile and auth logic"
authors = [
    {name = "Daniil325",email = "potekhindaniil04@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "fastapi (>=0.118.0,<0.119.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "minio (>=7.2.18,<8.0.0)",
    "miniopy-async (>=1.23.4,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pyhumps (>=3.8.0,<4.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "imgspy (>=0.2.2,<0.3.0)",
    "dishka (>=1.7.2,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
